# ytx-youtube-transcript-cli

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: main.rs
src/ytx_cli/: __init__.py  cli.py
tests/: test_cli.py
