[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytx-local"
version = "0.1.0"
description = "Tiny YouTube transcript CLI wrapper."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "youtube-transcript-api>=1.2.4,<2",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[project.scripts]
ytx = "ytx_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ytx_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
